logo added  and style changed

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Softtech_Ashram_Logo_1.png" type="image/x-icon">
 </head>
 
 <body>
+    <div class="logo">
+        <img src="Softtech_Ashram_Logo_1.png" alt="">
+        <h4>SoftTech Ashram</h4>
+    </div>
     <div class="full-container">
         <h2>Tic Tac Toe</h2>
         <div class="item-container" id="item-container">
